fix overlap

--- a/assets/base.css
+++ b/assets/base.css
@@ -1695,7 +1695,8 @@ details[open] > .share-button__fallback {
 .customer .field input:focus,
 .customer .field input:not(:placeholder-shown),
 .customer .field input:-webkit-autofill {
-  padding: calc(var(--inputs-border-width) + 2.2rem) 1.5rem calc(var(--inputs-border-width) + 0.8rem);
+  padding: 2.2rem 1.5rem 0.8rem;
+  margin: var(--inputs-border-width);
 }
 
 .field__input::-webkit-search-cancel-button,
