--- a/assets/component-cart.css
+++ b/assets/component-cart.css
@@ -95,13 +95,14 @@ cart-items {
   position: absolute;
   line-height: 1;
   height: 1.8rem;
-  top: -2rem;
+  top: -2.3rem;
   color: rgba(var(--color-foreground), 0.75);
 }
 
 .cart__note .field__input {
   height: 100%;
   position: relative;
+  border-radius: var(--inputs-radius);
 }
 
 .cart__note .text-area {
